--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet"  href="css/main.css">
     <!--Fonts-->
     <link rek="stylesheet" href="fonts/Product Sans Regular.ttf">
-    <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     </head>
 <body>   
     <img src="img/wringsvg.svg" id="wring">
