--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="css/main.css">
     <!--Fonts-->
-    <link rek="stylesheet" href="fonts/Product Sans Regular.ttf">
+    <link rek="stylesheet" href="https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     </head>
 <body>   
