--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="shortcut icon" type="img/png"  href="fav.png">
     </head>
 <body>   
     <img src="img/wringsvg.svg" id="wring">
